added search endpoint (XSS)
